--- a/sass/layout/_mobile.scss
+++ b/sass/layout/_mobile.scss
@@ -7,6 +7,7 @@
     width:100%;
     min-width:100%;
     max-width:100%;
+    height:$size__menu-height;
     position:relative;
   }
   .menu{
@@ -23,7 +24,7 @@
   }
   #map{
     top: -0.3em;
-    height: calc(100% - $size__menu-height);
+    height: calc( 100vh - #{$size__menu-height} );
     position:relative !important;
     width:100%;
   }
